Update and bug fixing

--- a/app/partials/messaging.html
+++ b/app/partials/messaging.html
@@ -35,7 +35,7 @@
                             <div class="ibox-box float-e-margins mb-0 ">
                                 <div class="ibox-box-title channel">
                                     <h5><span>Channel #</span>{{groupname}}</h5> 
-                                    <button type="button" class="btn btn-primary btn-bitbucket btn-sm f-right" onclick="parent.location='project-fxw.html'"><i class="fa fa-angle-left"></i> Back to Project</button>
+                                    <button type="button" class="btn btn-primary btn-bitbucket btn-sm f-right" ng-click="goToProject()"><i class="fa fa-angle-left"></i> Back to Project</button>
                                 </div>
                             </div>
                             <div class="ibox-content chat-message-box">
