--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -733,7 +733,7 @@
                                             <td>{{realtime.date}}</td>
                                             <td>{{realtime.time}} h</td>
                                             <td class="aright" ng-if="realtime.editable">
-                                                <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" ng-click="deleteRealtime(realtime)s"><i class="fa fa-close"></i></button>
+                                                <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" ng-click="deleteRealtime(realtime)"><i class="fa fa-close"></i></button>
                                                 <button type="button" class="btn btn-white btn-sm" role="button" data-toggle="modal" ng-click="editRealtime(realtime)"><i class="fa fa-pencil"></i></button>
                                             </td>
                                              <td class="aright" ng-if="!realtime.editable">
