--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -118,9 +118,9 @@
                                                         </td>
                                                         <td class="notification-avatar">
                                                             <div class="project-people aleft" ng-if="project.team.length>0">
-                                                                 <a href="" class="team-lead" ng-repeat="member in project.team" ng-if='member.role.role==teamroles.TeamLeader.role' ><img src="{{member.photo}}" class="img-circle" alt="{{member.name}}" ng-if='member.photo!=null'>
+                                                                 <a href="" class="team-lead" ng-repeat="member in project.team" ng-if='member.isTeamLeader' ><img src="{{member.photo}}" class="img-circle" alt="{{member.name}}" ng-if='member.photo!=null'>
                                                                 <img src="img/users/profile_default_small.jpg" class="img-circle" alt="{{member.name}}" ng-if='member.photo==null'></a>
-                                                                <a href="" ng-repeat="member in project.team" ng-if='member.role.role!=teamroles.TeamLeader.role'><img src="{{member.photo}}" class="img-circle" alt="{{member.name}}" ng-if='member.photo!=null'>
+                                                                <a href="" ng-repeat="member in project.team" ng-if='!member.isTeamLeader'><img src="{{member.photo}}" class="img-circle" alt="{{member.name}}" ng-if='member.photo!=null'>
                                                                 <img src="img/users/profile_default_small.jpg" class="img-circle" alt="{{member.name}}" ng-if='member.photo==null'></a>
                                                                
                                                             </div>
@@ -221,8 +221,23 @@
                                     <tbody >
                                         <tr ng-repeat="prod in team">
                                             <td class="bold">{{prod.surname}} {{prod.name}}</td>
-                                            <td class="bold">
-                                                {{prod.role.Text}}
+                                            <td class="bold" ng-if="prod.isTeamLeader">
+                                                 
+                                                 <select  id="memberrole" ng-click="changeRole(prod,1)">
+                                                    <option value="teamlead" selected >Team leader</option>
+                                                    <option value="member" >Member</option>
+                                       
+                                                </select>
+                                            
+                                            </td>
+                                            <td class="bold" ng-if="!prod.isTeamLeader">
+                                                
+                                                 <select  id="memberrole" ng-click="changeRole(prod,0)">
+                                                    <option value="teamlead">Team leader</option>
+                                                    <option value="member" selected >Member</option>
+                                       
+                                                </select>
+                                            
                                             </td>
                                             <td class="aright">
                                                 <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" ng-click="deleteTeamMember(prod)" ng-if='prod.role.role!=teamroles.TeamLeader.role'><i class="fa fa-close"></i></button>
