--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -66,8 +66,8 @@
                                     <a ng-click="openmessages()" class="fxwlink-member" ng-if="hasteam && isclient"><small><i class="fa fa-comments"></i> see messages</small></a>
                                 
                                 
-                                    <a href="" class="team-lead" ng-repeat="member in team" ng-if='member.role.role==teamroles.TeamLeader.role' ><img alt="{{member.name}}"  class="img-circle" src="{{member.photo}}"></a>
-                                    <a href="" ng-repeat="member in team" ng-if='member.role.role!=teamroles.TeamLeader.role'><img alt="{{member.name}}" class="img-circle" src="{{member.photo}}"></a>
+                                    <a href="" class="team-lead" ng-repeat="member in team" ng-if='member.isTeamLeader' ><img alt="{{member.name}}"  class="img-circle" src="{{member.photo}}"></a>
+                                    <a href="" ng-repeat="member in team" ng-if='!member.isTeamLeader'><img alt="{{member.name}}" class="img-circle" src="{{member.photo}}"></a>
                                     
                                 
                                 </div>
@@ -472,8 +472,23 @@
                                     <tbody >
                                         <tr ng-repeat="prod in team">
                                             <td class="bold">{{prod.surname}} {{prod.name}}</td>
-                                            <td class="bold">
-                                                {{prod.role.Text}}
+                                            <td class="bold" ng-if="prod.isTeamLeader">
+                                                 <div class="select-option">
+                                                 <select class="select2" id="memberrole" ng-click="changeRole(prod,1)">
+                                                    <option value="teamlead" selected >Team leader</option>
+                                                    <option value="member" >Member</option>
+                                       
+                                                </select>
+                                            </div>
+                                            </td>
+                                             <td class="bold" ng-if="!prod.isTeamLeader">
+                                                <div class="select-option">
+                                                 <select class="select2" id="memberrole" ng-click="changeRole(prod,0)">
+                                                    <option value="teamlead">Team leader</option>
+                                                    <option value="member" selected >Member</option>
+                                       
+                                                </select>
+                                            </div>
                                             </td>
                                             <td class="aright">
                                                 <button type="button" class="btn btn-white btn-sm fxw-alert-delete" role="button" ng-click="deleteTeamMember(prod)" ng-if='prod.role.role!=teamroles.TeamLeader.role'><i class="fa fa-close"></i></button>
