--- a/app/partials/cuser.html
+++ b/app/partials/cuser.html
@@ -189,7 +189,7 @@
                             <div class="form-group m-0">
                                 <!--select-->
                                 <div class="select-option f-left m-0" style="width: 30%; margin-right: 2.5% ! important;"  >
-                                    <select class="select2" ng-model="phonecode" id-"phonecodeselect">
+                                    <select class="select2" ng-model="phonecode" id="phonecodeselect">
                                         <option>+49</option>
                                         <option>+90</option>
                                         <option>+216</option>
