--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -11,7 +11,7 @@
                     <h2><i class="fa fa-search"></i> Reports</h2>
                     <ol class="breadcrumb">
                         <li>
-                            adnatives
+                            {{project_name}}
                         </li>
                         <li>
                             Reports
