--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -133,8 +133,8 @@
                     <div class="col-md-9 p0">
                        <div class="btn-group fleft mr10 mb10">
                            
-                                <select  class="select2" ng-change="loadPerformancebyMonth()" ng-model="selectedMonth" id="monthlyselect">
-                                    <option value="0">month</option>
+                                <select   ng-change="loadPerformancebyMonth()" ng-model="selectedMonth" id="monthlyselect">
+                                    <option value="0" selected>month</option>
                                     <option value="1">january</option>
                                     <option value="2">february</option>
                                     <option value="3">march</option>
