--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -10,7 +10,7 @@
                             <a data-toggle="modal" data-target="#key-account">
                                 <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
                                 <div class="ka-name">
-                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}} {<i class="fa fa-angle-down"></i></span>
+                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}} <i class="fa fa-angle-down"></i></span>
                                     <span class="ka-span-2">{{keyaccount.tel}}</span>
                                 </div>
                                 <div class="clear-both"></div>
