--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -75,8 +75,8 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="project-people">
-                                    <a href="" class="team-lead" ng-repeat="member in team" ng-if='member.role.role==teamroles.TeamLeader.role' ><img alt="{{member.name}}"  class="img-circle" src="{{member.photo}}"></a>
-                                    <a href="" ng-repeat="member in team" ng-if='member.role.role!=teamroles.TeamLeader.role'><img alt="{{member.name}}" class="img-circle" src="{{member.photo}}"></a>
+                                    <a href="" class="team-lead" ng-repeat="member in team" ng-if='member.isTeamLeader' ><img alt="{{member.name}}"  class="img-circle" src="{{member.photo}}"></a>
+                                    <a href="" ng-repeat="member in team" ng-if='!member.isTeamLeader'><img alt="{{member.name}}" class="img-circle" src="{{member.photo}}"></a>
                                 </div>
                             </div>
                         </div>
@@ -323,6 +323,12 @@
                                                              <td class="project-realtime" ng-if="!isclient && !story.finished && story.realtime!=null &&(ticket_status==ticketStatus.Production.status || ticket_status==ticketStatus.Testing.status)">
                                                                  <i class="fa fa-clock-o"></i> 
                                                                 <span class="hour">{{story.realtime}} h</span>
+                                                                
+                                                            </td>
+                                                            <td class="project-realtime" ng-if="!isclient && story.finished && story.realtime==null &&(ticket_status==ticketStatus.Production.status || ticket_status==ticketStatus.Testing.status)">
+                                                                 <i class="fa fa-clock-o"></i> 
+                                                                <span class="hour">{{story.workedhours}} h</span>
+                                                                <a  ng-click="openAddRealtime(null,story)"><small>+ add</small></a>
                                                                 
                                                             </td>
                                                             <td class="project-realtime" ng-if="!isclient && story.finished && story.realtime!=null &&(ticket_status==ticketStatus.Production.status || ticket_status==ticketStatus.Testing.status)">
