--- a/app/partials/cuser.html
+++ b/app/partials/cuser.html
@@ -4,7 +4,7 @@
 
             var $image = $(".image-crop > img")
             $($image).cropper({
-                aspectRatio:  4 / 3,
+                aspectRatio:  1/1,
                 preview: ".img-preview",
                 done: function(data) {
                     // Output the result data for cropping image.
@@ -269,12 +269,12 @@
                    <div class="row">
                         <div class="col-md-6">
                                 <div class="image-crop">
-                                    <img src="img/users/big-image.jpg">
+                                    <img src="{{defaultimage}}" style="height:300px;width:300px">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <h4>Preview image</h4>
-                                <div class="img-preview img-preview-sm"></div>
+                                <div class="img-preview img-preview-lg" style="height:80px;width:80px"></div>
                                 <h4>Comon method</h4>
                                 <p>
                                     You can upload new image to crop container and easy download new cropped image.
