--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -1,8 +1,8 @@
  <!--top header-->
             <div class="row border-bottom" ng-controller="MenuNavCtrl">
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-                    <div class="navbar-header">
-                        <a href="" class="navbar-minimalize minimalize-styl-2 btn btn-primary"><i class="fa fa-bars"></i> </a>
+                    <div class="navbar-header" ng-click="menuCollapse()">
+                        <a href="" class="navbar-minimalize minimalize-styl-2 btn btn-primary" ><i class="fa fa-bars"></i> </a>
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
 
