--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -55,7 +55,7 @@
                     </li>
                     <!--End-->
                 
-                    <li ng-if="doDisplay('/dashboard')" ng-click="openclosetab('projecttab')">
+                    <li ng-if="doDisplay('/dashboard')" ng-click="openclosetab('projecttab')" ng-class="{'active':(projectactive)}" activate-tab>
                         <a><i class="fa fa-clone"></i> <span class="nav-label">Projects</span> <span class="fa arrow"></span></a>
                         <ul id="projecttab" class="nav nav-second-level collapse" >
                             <li ng-repeat='project in projects'>
@@ -68,26 +68,26 @@
                         </ul>
                     </li>
 
-                    <li ng-if="doDisplay('/messaging')" ng-click="openclosetab('messagetab')">
+                    <li ng-if="doDisplay('/messaging')" ng-click="openclosetab('messagetab')" ng-class="{'active':(messageactive)}" activate-tab>
                         <a ><i class="fa fa-comments"></i> <span class="nav-label">Messages</span> <span class="label label-danger pull-right">{{totalmessages}}</span></span></a>
                         <ul id="messagetab" class="nav nav-second-level collapse">
                             <li  ng-repeat='channel in channels'><a href="#/messaging?channel_id={{channel.id}}&project_id={{channel.project_id}}"><span class="nav-label">{{channel.name}}</span> <span class="label label-default pull-right">{{channel.newmessages}}</span></a></li>
                         </ul> 
                     </li>
 
-                    <li ng-if="doDisplay('/team')">
+                    <li ng-if="doDisplay('/team')" ng-class="{'active':(teamactive)}" activate-tab>
                         <a href="#/team"><i class="fa fa-users"></i> <span class="nav-label">Team</span></a>
                     </li>
 
-                    <li  ng-if="doDisplay('/client')">
+                    <li  ng-if="doDisplay('/client')" ng-class="{'active':(clientactive)}" activate-tab>
                         <a href="#/client"><i class="fa fa-building"></i> <span class="nav-label">Client</span></a>
                     </li>
 
-                    <li ng-if="doDisplay('/cuser')">
+                    <li ng-if="doDisplay('/cuser')" ng-class="{'active':(cuseractive)}" activate-tab>
                         <a href="#/cuser"><i class="fa fa-users"></i> <span class="nav-label">User</span></a>
                     </li>
 
-                    <li ng-if="doDisplay('/report')" ng-click="openclosetab('reportab')">
+                    <li ng-if="doDisplay('/report')" ng-click="openclosetab('reportab')" ng-class="{'active':(reportactive)}" activate-tab>
                         <a><i class="fa fa-check-square"></i> <span class="nav-label">Report</span></a>
                         <ul id="reportab" class="nav nav-second-level collapse">
                             <li ng-repeat='project in projects'>
