--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -6,27 +6,7 @@
         <!--page wrapper-->
         <div id="page-wrapper" class="gray-bg sidebar-content">
             
-           <div class="row border-bottom" ng-controller="MenuNavCtrl">
-                <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-                    <div class="navbar-header">
-                        <a href="" class="navbar-minimalize minimalize-styl-2 btn btn-primary"><i class="fa fa-bars"></i> </a>
-                    </div>
-                    <ul class="nav navbar-top-links navbar-right">
-
-                         <li class="key-account fright" ng-if="isclient"> 
-                            <a data-toggle="modal" data-target="#key-account">
-                                <div class="ka-image"><img src="{{keyaccount.photo}}" class="img-circle" alt="image" width="35" heigth="35"></div>
-                                <div class="ka-name">
-                                    <span class="ka-span-1">{{keyaccount.name}} {{keyaccount.surname}}<i class="fa fa-angle-down"></i></span>
-                                    <span class="ka-span-2">{{keyaccount.tel}}</span>
-                                </div>
-                                <div class="clear-both"></div>
-                            </a>
-                        </li>
-                         
-                        
-                    </ul>
-                </nav></div>
+           <div nav-menu></div>
          
              <!--header title-->
             <div class="row wrapper border-bottom white-bg page-heading">
