--- a/app/partials/cuser.html
+++ b/app/partials/cuser.html
@@ -132,7 +132,7 @@
 	                                <span class="ibox-users-picture users">
 	                                    <img width="48" heigth="48" class="img-circle" src="{{user.photo}}" alt="Picture">
 	                                </span>
-	                                <h5>{{user.surname}} {{user.name}}</h5>
+	                                <h5>{{user.name}} {{user.surname}}</h5>
 	                                <span class="ibox-users-job-title">{{user.title}}</span>
 	                                <span class="ibox-users-email">{{user.email}}</span>
 	                            </div>
@@ -141,7 +141,7 @@
 	                                    <button type="button" class="btn btn-white btn-sm" ng-click="openImageUplaoder(user)"><i class="fa fa-camera"></i></button>
 	                                    <button type="button" class="btn btn-white btn-sm" ng-click="openmemberForm(user)"><i class="fa fa-pencil"></i></button>
 	                                    <span class="ibox-users-action-line"></span>
-	                                    <button type="button" class="btn btn-white btn-sm" ng-click="openProfile(user)"><i class="fa fa-user"></i></button>
+	                                    <!-- <button type="button" class="btn btn-white btn-sm" ng-click="openProfile(user)"><i class="fa fa-user"></i></button> -->
 	                                </div>
 	                            </div>
 	                        </div>
