--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -741,7 +741,7 @@
                                     </tr></thead>
                                     <tbody>
                                         <tr ng-repeat="realtime in realtimes">
-                                            <td>{{assigned.surname}} {{assigned.name}}</td>
+                                            <td>{{assigned.name}} {{assigned.surname}}</td>
                                             <td>{{realtime.date}}</td>
                                             <td>{{realtime.time}} h</td>
                                             <td class="aright" ng-if="realtime.editable">
