--- a/app/partials/keybox.html
+++ b/app/partials/keybox.html
@@ -65,12 +65,12 @@
                                                 <div class="col-lg-12 p0">
                                                     <i class="fa fa-lock fleft keybox-icon"></i>
                                                     <div class="form-group fleft mr10 mb10">
-                                                        <input type="text" required="" placeholder="Title" class="form-control keybox-input" ng-model="conf.title">
+                                                        <input type="text" required="" placeholder="Title" class="form-control keybox-input" ng-model="conf.title" ng-change="editkeybox()">
                                                     </div>
                                                    <button class="keybox-delete fright fxw-alert-delete" ng-click="deleteKeubox(conf)"><i class="fa fa-trash"></i></button>
                                                 </div>
                                                 <div class="col-lg-12 p0">
-                                                   <textarea class="form-control textarea-keybox" ng-model="conf.config"></textarea>
+                                                   <textarea class="form-control textarea-keybox" ng-model="conf.config" ng-change="editkeybox()"></textarea>
                                                 </div> 
                                             <div class="clear-both"></div>
                                         </div><!-- ibox-content--> 
@@ -78,7 +78,7 @@
 
                                  
 
-                                    <div class="col-lg-12 aright pl0" ng-if="isclient">
+                                    <div class="col-lg-12 aright pl0" ng-if="isclient && isadding">
                                         <div class="ibox-content p10">
                                             <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" ng-click="resetKeybox()">cancel</button>
                                             <button class="btn btn-primary btn-bitbucket btn-m" type="button" ng-click="saveKeyBox()">save</button>
