--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -449,7 +449,7 @@
                         <div class="col-lg-12 p15" style="background-color: #1ab394;">
                             <div class="form-group fleft m0 mr10">
                                 <div class="select-option m-0" style="width: 360px;">
-                                    <select class="select2" ng-model="addedmember" id="selectdevmember" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in devteam track by member.order">
+                                    <select  ng-model="addedmember" id="selectdevmember" ng-options="[member.name,' ',member.surname,', ',member.role.Text].join('') for member in devteammembers track by member.order">
                                        
                                        
                                     </select>
@@ -470,7 +470,7 @@
                                     </thead>
                                     <tbody >
                                         <tr ng-repeat="prod in team">
-                                            <td class="bold">{{prod.surname}} {{prod.name}}</td>
+                                            <td class="bold">{{prod.name}} {{prod.surname}}</td>
                                             <td class="bold" ng-if="prod.isTeamLeader">
                                                  <div class="select-option">
                                                  <select class="select2" id="memberrole" ng-click="changeRole(prod,1)">
@@ -932,7 +932,7 @@
                                                             </td>
                                                             <td class="project-title">
                                                                 {{task.title}}
-                                                                <small>Assign to: <b>{{task.assignto.surname}}</b></small>
+                                                                <small>Assign to: <b>{{task.assignto.name}}</b></small>
                                                             </td>
                                                             <td class="project-estimation">
                                                                 <i class="fa fa-clock-o"></i> 
@@ -1043,7 +1043,7 @@
                                             <b>{{company_name}}</b><br/>
                                             {{client.address.address}}<br/>
                                            {{client.address.zipcode}} {{client.address.city}} - {{client.address.country}} <br/><br/>
-                                            Represented by <br/><b>{{client.surname}} {{client.name}}</b>
+                                            Represented by <br/><b>{{client.name}} {{client.surname}}</b>
                                         </p>
                                         
                                     </div>
