--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -27,14 +27,14 @@
                                 <a data-toggle="dropdown" class="dropdown-toggle">
                                     <span class="clear"> 
                                         <span class="block m-t-xs"> <strong class="font-bold">{{company}}</strong></span> 
-                                        <span class="text-muted text-xs block">{{surname}} {{name}} </span> 
+                                        <span class="text-muted text-xs block">{{name}} {{surname}} </span> 
                                         <span class="text-muted text-xs block">{{title}}<b class="caret"></b></span> 
                                     </span> 
                                 </a>
                                 
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                <li><a href="profile-fxw.html">Profile</a></li>
-                                <li><a href="settings-fxw.html">Settings</a></li>
+                                <li><a >Profile</a></li>
+                                <!-- <li><a >Settings</a></li> -->
                                 <li class="divider"></li>
                                 <li><a ng-click="logout()">Log out</a></li>
                             </ul>
