--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -188,7 +188,7 @@
                                                         </td>
 
                                                         <td class="project-title">
-                                                            <a href="team-admin-profile-fxw.html">{{member.surname}} {{member.name}}</a> 
+                                                            <a href="team-admin-profile-fxw.html">{{member.name}} {{member.surname}}</a> 
                                                             <small>{{member.city}}, {{member.country}}</small>
                                                         </td>
                                                         <td class="bold">
@@ -253,7 +253,7 @@
                                                         </td>
 
                                                         <td class="project-title">
-                                                            <a href="team-admin-profile-fxw.html">{{member.surname}} {{member.name}}</a> 
+                                                            <a href="team-admin-profile-fxw.html">{{member.name}} {{member.surname}}</a> 
                                                             <small>{{member.city}}, {{member.country}}</small>
                                                         </td>
                                                         <td class="bold">
@@ -332,7 +332,7 @@
                                                         </td>
 
                                                         <td class="project-title">
-                                                            <a href="team-admin-profile-fxw.html">{{member.surname}} {{member.name}}</a> 
+                                                            <a href="team-admin-profile-fxw.html">{{member.name}} {{member.surname}}</a> 
                                                             <small>{{member.city}}, {{member.country}}</small>
                                                         </td>
                                                         <td class="bold"><i class="fa fa-clone mr5"></i> {{member.projectcount}}</td>
@@ -385,8 +385,8 @@
                         <div class="col-md-6">
                             <h4>Contact</h4>
                             <div class="form-group">
-                                <input type="text" class="form-control login-first-name" placeholder="First Name" required="" ng-model="surname">
-                                <input type="text" class="form-control login-last-name" placeholder="Last Name" required="" ng-model="name">
+                                <input type="text" class="form-control login-first-name" placeholder="First Name" required="" ng-model="name">
+                                <input type="text" class="form-control login-last-name" placeholder="Last Name" required="" ng-model="surname">
                                 <div class="clear-both"></div>
                             </div>
                             <div class="form-group">
