--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -77,12 +77,12 @@
                                           </div>
 
                                         </div>
-                                        <div class="col-md-4 p0">
+                                        <!-- <div class="col-md-4 p0">
                                             <div class="input-group project-search">
                                                 <input type="text" placeholder="search" class="input-sm form-control">
                                                 <span class="input-group-btn"><button type="button" class="btn btn-sm btn-primary"> go!</button> </span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div style="clear:both;"></div>
                                     </div>
                                     <!-- end filter-->
