--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -50,7 +50,7 @@
                                 <button class="btn btn-primary btn-bitbucket btn-m mr5" type="button" ng-click="openCreateTicket(null)" ng-if="isclient && issigned"><i class="fa fa-plus mr5"></i> add ticket</button>
                                 <button class="btn btn-primary btn-bitbucket btn-m mr5" type="button" ng-click="openCreateTicket(null)" ng-if="isclient && !issigned" disabled><i class="fa fa-plus mr5"></i> add ticket</button>
                                  <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" data-target="#project-description" data-toggle="modal"><i class="fa fa-file-text mr5"></i> description</button>
-                                <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" data-target="#budgetlimit" data-toggle="modal" ng-if="isclient"><i class="fa fa-thumb-tack mr5" ></i> budgetlimit</button>
+                                <!-- <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" data-target="#budgetlimit" data-toggle="modal" ng-if="isclient"><i class="fa fa-thumb-tack mr5" ></i> budgetlimit</button> -->
                                 <button class="btn btn-default btn-bitbucket btn-m mr5" type="button" ng-click="openKeybox()"><i class="fa fa-lock mr5"></i> keybox</button>
                                 <a ng-if="!isclient" class="btn btn-default btn-bitbucket btn-m mr5" href="https://fxw.slack.com/" target="_blank"><i class="fa fa-slack mr5" ></i> slack</a>
                                 <a class="btn btn-default btn-bitbucket btn-m mr5" href="https://www.pivotaltracker.com/n/projects/928534" target="_blank" ng-if="!isclient"><i class="fa fa-circle-o mr5"></i> pivotal</a>
