--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -225,7 +225,7 @@
                                                         <td class="project-actions">
                                                             <button type="button" class="btn btn-white btn-sm"  ng-click="openmemberForm(member)"><i class="fa fa-pencil"></i> </button>
                                                             <button type="button" class="btn btn-white btn-sm"  ng-click="openImageUplaoder(member)"><i class="fa fa-camera"></i> </button>
-                                                            <button type="button" class="btn btn-white btn-sm" data-toggle="modal" data-target="#modal-away"><i class="fa fa-calendar"></i></button>
+                                                            <!-- <button type="button" class="btn btn-white btn-sm" data-toggle="modal" data-target="#modal-away"><i class="fa fa-calendar"></i></button> -->
                                                             <a ng-click="openProfile(member)" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
                                                         </td> 
                                                     </tr>
@@ -296,7 +296,7 @@
                                                         <td class="project-actions">
                                                             <button type="button" class="btn btn-white btn-sm"  ng-click="openmemberForm(member)"><i class="fa fa-pencil"></i> </button>
                                                             <button type="button" class="btn btn-white btn-sm"  ng-click="openImageUplaoder(member)"><i class="fa fa-camera"></i> </button>
-                                                            <button type="button" class="btn btn-white btn-sm" data-toggle="modal" data-target="#modal-away"><i class="fa fa-calendar"></i></button>
+                                                            <!-- <button type="button" class="btn btn-white btn-sm" data-toggle="modal" data-target="#modal-away"><i class="fa fa-calendar"></i></button> -->
                                                             <a ng-click="openProfile(member)" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
                                                         </td> 
                                                     </tr>
