--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -17,7 +17,7 @@
                 <button type="submit" class="btn btn-primary block full-width m-b" id="loginbtn">Login</button>
                 <div class="errormsg">{{errors}}</div>
 
-                <a href="forgot-password-fxw.html"><small>Forgot password?</small></a>
+                <!-- <a href="forgot-password-fxw.html"><small>Forgot password?</small></a> -->
                 <!--<div class="hr-line-solid"></div>
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="register-fxw.html">Request an account</a>-->
